[package]
name = "rust-graphics-library-loader"
version = "0.1.4"
authors = ["Hossein Noroozpour <hossein.noroozpour@gmail.com>"]
description = "A simple, small and minimal library loader."
repository = "https://github.com/rust-graphics/rust-graphics-library-loader"
license = "MIT"
readme = "README.md"
keywords = ["ffi", "dll", "shared-library", "so"]
categories = ["external-ffi-bindings", "development-tools::ffi"]

[dependencies]
rust-graphics-log = {version = "*", path = "../rust-graphics-log"}

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "*"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["libloaderapi", "minwindef"] }

[features]
debug_derive = []

[profile.release]
lto = true